# aleobadge

./: .gitignore  Cargo.toml  README.md
assets/: ASSETS_INVENTORY.md
assets/audio/: README.md
assets/ui/: ui_assets.yaml
client/: Cargo.toml
client/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: db.rs  main.rs
