[package]
name = "match3-pvp"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
match3-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tokio-tungstenite = "0.21"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
