[package]
name = "match3-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
match3-protocol = { path = "../protocol" }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid"] }
dotenvy = "0.15"
